welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: ';' expected but ')' found.
    faireVColor.RED);
                   ^